--- a/text/merklization.tex
+++ b/text/merklization.tex
@@ -23,18 +23,18 @@ The state serialization is then defined as the dictionary built from the amalgam
     &&C(1) &\mapsto \se([\var{x}\mid x\orderedin \authpool]) \;, \\
     &&C(2) &\mapsto \se(\varphi) \;, \\
     &&C(3) &\mapsto \se(\var{[(h, b, s, \var{\mathbf{p}})\mid \tup{h, b, s, \mathbf{p}} \orderedin \recenthistory]}, \se_M(\beefybelt)) \;, \\
-    &&C(4) &\mapsto \se\left(\tup{\gamma_\mathbf{k}, \gamma_z, \left\{\,\begin{aligned}
-      0\ &\when \gamma_\mathbf{s} \in \seq{\mathbb{C}}_\mathsf{E}\\
-      1\ &\when \gamma_\mathbf{s} \in \seq{\hash_B}_\mathsf{E}\\
-    \end{aligned}\right\}, \gamma_\mathbf{s},
-    \var{\gamma_\mathbf{a}}}\right) \;, \\
+    &&C(4) &\mapsto \se\left(\tup{\pendingset, \epochroot, \left\{\,\begin{aligned}
+      0\ &\when \sealtickets \in \seq{\mathbb{C}}_\mathsf{E}\\
+      1\ &\when \sealtickets \in \seq{\bskey}_\mathsf{E}\\
+    \end{aligned}\right\}, \sealtickets,
+    \var{\ticketaccumulator}}\right) \;, \\
     &&C(5) &\mapsto \se(\var{\orderby{x}{x \in \goodset}}, \var{\orderby{x}{x \in \badset}}, \var{\orderby{x}{x \in \wonkyset}}, \var{\orderby{x}{x \in \offenders}}) \;, \\
-    &&C(6) &\mapsto \se(\eta) \;, \\
-    &&C(7) &\mapsto \se(\iota) \;, \\
-    &&C(8) &\mapsto \se(\kappa) \;, \\
-    &&C(9) &\mapsto \se(\lambda) \;, \\
+    &&C(6) &\mapsto \se(\entropy) \;, \\
+    &&C(7) &\mapsto \se(\stagingset) \;, \\
+    &&C(8) &\mapsto \se(\activeset) \;, \\
+    &&C(9) &\mapsto \se(\previousset) \;, \\
     &&C(10) &\mapsto \se([\maybe{(w, \se_4(t))} \mid (w, t) \orderedin \rho]) \;, \\
-    &&C(11) &\mapsto \se_4(\tau) \;, \\
+    &&C(11) &\mapsto \se_4(\thetime) \;, \\
     &&C(12) &\mapsto \se_4(\manager, \assigners, \delegator) \concat \se(\alwaysaccers) \;, \\
     &&C(13) &\mapsto \se_4(\pi_V, \pi_L), \pi_C, \pi_S \;, \\
     &&C(14) &\mapsto \se([\var{(\mathbf{w}, \var{\mathbf{d}})} \mid (\mathbf{w}, \mathbf{d}) \orderedin \mathbf{i} \mid \mathbf{i} \orderedin \ready]) \;, \\
@@ -110,9 +110,9 @@ The underlying function for our Merkle trees is the \emph{node} function $N$, wh
   N\colon\left\{\begin{aligned}
     (\seq{\blob_n}, \blob \to \hash) &\to \blob_n \cup \hash \\
     (\mathbf{v}, H) &\mapsto \begin{cases}
-      \zerohash &\when |\mathbf{v}| = 0 \\
-      \mathbf{v}_0 &\when |\mathbf{v}| = 1 \\
-      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}}, H) \concat N(\mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots}, H)) &\otherwise
+      \zerohash &\when \len{\mathbf{v}} = 0 \\
+      \mathbf{v}_0 &\when \len{\mathbf{v}} = 1 \\
+      H(\token{\$node} \concat N(\mathbf{v}_{\dots\ceil{\nicefrac{\len{\mathbf{v}}}{2}}}, H) \concat N(\mathbf{v}_{\ceil{\nicefrac{\len{\mathbf{v}}}{2}}\dots}, H)) &\otherwise
     \end{cases}
   \end{aligned}\right.\label{eq:merklenode}
 \end{equation}
@@ -122,19 +122,19 @@ The astute reader will realize that if our $\blob_n$ happens to be equivalent $\
 We also define the \emph{trace} function $T$, which returns each opposite node from top to bottom as the tree is navigated to arrive at some leaf corresponding to the item of a given index into the sequence. It is useful in creating justifications of data inclusion.
 \begin{equation}
   T\colon\left\{\begin{aligned}
-    (\seq{\blob_n}, \N_{|\mathbf{v}|}, \blob \to \hash)\ &\to \seq{\blob_n \cup \hash}\\
+    (\seq{\blob_n}, \N_{\len{\mathbf{v}}}, \blob \to \hash)\ &\to \seq{\blob_n \cup \hash}\\
     (\mathbf{v}, i, H) &\mapsto \begin{cases}
-      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when |\mathbf{v}| > 1\\
+      [N(P^\bot(\mathbf{v}, i), H)] \concat T(P^\top(\mathbf{v}, i), i - P_I(\mathbf{v}, i), H) &\when \len{\mathbf{v}} > 1\\
       [] &\otherwise\\
       \multicolumn{2}{l}{
         \begin{aligned}
           \quad \where P^s(\mathbf{v}, i) &\equiv \begin{cases}
-            \mathbf{v}_{\dots\ceil{\nicefrac{|\mathbf{v}|}{2}}} &\when (i < \ceil{\nicefrac{|\mathbf{v}|}{2}}) = s\\
-            \mathbf{v}_{\ceil{\nicefrac{|\mathbf{v}|}{2}}\dots} &\otherwise
+            \mathbf{v}_{\dots\ceil{\nicefrac{\len{\mathbf{v}}}{2}}} &\when (i < \ceil{\nicefrac{\len{\mathbf{v}}}{2}}) = s\\
+            \mathbf{v}_{\ceil{\nicefrac{\len{\mathbf{v}}}{2}}\dots} &\otherwise
           \end{cases}\\[4pt]
           \quad \also P_I(\mathbf{v}, i) &\equiv \begin{cases}
-            0 &\when i < \ceil{\nicefrac{|\mathbf{v}|}{2}} \\
-            \ceil{\nicefrac{|\mathbf{v}|}{2}} &\otherwise
+            0 &\when i < \ceil{\nicefrac{\len{\mathbf{v}}}{2}} \\
+            \ceil{\nicefrac{\len{\mathbf{v}}}{2}} &\otherwise
           \end{cases}\\
         \end{aligned}
       }
@@ -150,7 +150,7 @@ We define the well-balanced binary Merkle function as $\mathcal{M}_B$:
     \mathcal{M}_B\colon \left\{\begin{aligned}\label{eq:simplemerkleroot}
       (\seq{\blob}, \blob \to \hash) &\to \hash \\
       (\mathbf{v}, H) &\mapsto \begin{cases}
-        H(\mathbf{v}_0) &\when |\mathbf{v}| = 1 \\
+        H(\mathbf{v}_0) &\when \len{\mathbf{v}} = 1 \\
         N(\mathbf{v}, H) &\otherwise
       \end{cases} \\
     \end{aligned}\right.
@@ -170,13 +170,13 @@ We define the constant-depth binary Merkle function as $\mathcal{M}$. We define 
   \end{aligned}\right.\\
   \label{eq:constantdepthsubtreemerklejust}
   \mathcal{J}_x&\colon \left\{\begin{aligned}
-    (\seq{\blob}, \N_{|\mathbf{v}|}, \blob \to \hash) &\to \seq{\hash}\\
-    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, |\mathbf{v}|)) - x})}
+    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\mathbf{v}, i, H) &\mapsto T(C(\mathbf{v}, H), 2^xi, H)_{\dots\max(0, \ceil{\log_2(\max(1, \len{\mathbf{v}})) - x})}
   \end{aligned}\right.\\
   \label{eq:constantdepthsubtreemerkleleafpage}
   \mathcal{L}_x&\colon \left\{\begin{aligned}
-    (\seq{\blob}, \N_{|\mathbf{v}|}, \blob \to \hash) &\to \seq{\hash}\\
-    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, |\mathbf{v}|)}]
+    (\seq{\blob}, \N_{\len{\mathbf{v}}}, \blob \to \hash) &\to \seq{\hash}\\
+    (\mathbf{v}, i, H) &\mapsto [H(\token{\$leaf} \concat l) \mid l \orderedin \mathbf{v}_{2^xi \dots \min(2^xi+2^x, \len{\mathbf{v}})}]
   \end{aligned}\right.
 \end{align}
 
@@ -184,15 +184,15 @@ For the latter justification $\mathcal{J}_x$ to be acceptable, we must assume th
 
 As above, we may assume a default value for $H$ of the Blake 2b hash function, $\blake$.
 
-For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\mathbb{H}_0$:
+For justifications and Merkle root calculations, a constancy preprocessor function $C$ is applied which hashes all data items with a fixed prefix ``leaf'' and then pads the overall size to the next power of two with the zero hash $\zerohash$:
 \begin{equation}
   C\colon\left\{\begin{aligned}
     (\seq{\blob}, \blob \to \hash) &\to \seq{\hash}\\
     (\mathbf{v}, H) &\mapsto \mathbf{v}' \ \where \left\{\; \begin{aligned}
-      |\mathbf{v}'| &= 2^{\ceil{\log_2(\max(1, |\mathbf{v}|))}}\\
+      \len{\mathbf{v}}| &= 2^{\ceil{\log_2(\max(1, \len{\mathbf{v}}))}}\\
       \mathbf{v}'_i &= \begin{cases}
-        H(\token{\$leaf} \concat \mathbf{v}_i) &\when i < |\mathbf{v}|\\
-        \mathbb{H}_0 &\otherwise \\
+        H(\token{\$leaf} \concat \mathbf{v}_i) &\when i < \len{\mathbf{v}}\\
+        \zerohash &\otherwise \\
       \end{cases}
     \end{aligned}\right.
   \end{aligned}\right.
@@ -202,7 +202,7 @@ For justifications and Merkle root calculations, a constancy preprocessor functi
 
 The Merkle Mountain Range (\textsc{mmr}) is an append-only cryptographic data structure which yields a commitment to a sequence of values. Appending to an \textsc{mmr} and proof of inclusion of some item within it are both $O(\log(N))$ in time and space for the size of the set.
 
-We define a Merkle Mountain Range as being within the set $\seq{\hash?}$, a sequence of peaks, each peak the root of a Merkle tree containing $2^i$ items where $i$ is the index in the sequence. Since we support set sizes which are not always powers-of-two-minus-one, some peaks may be empty, $\none$ rather than a Merkle root.
+We define a Merkle Mountain Range as being within the set $\seq{\optional{\hash}}$, a sequence of peaks, each peak the root of a Merkle tree containing $2^i$ items where $i$ is the index in the sequence. Since we support set sizes which are not always powers-of-two-minus-one, some peaks may be empty, $\none$ rather than a Merkle root.
 
 Since the sequence of hashes is somewhat unwieldy as a commitment, Merkle Mountain Ranges are themselves generally hashed before being published. Hashing them removes the possibility of further appending so the range itself is kept on the system which needs to generate future proofs.
 
@@ -213,14 +213,14 @@ We define the append function $\mathcal{A}$ as:
   \begin{aligned}
     \label{eq:mmrappend}
     \mathcal{A}&\colon\deffunc{
-      (\seq{\hash?}, \hash, \blob\to\hash) &\to \seq{\hash?}\\
+      (\seq{\optional{\hash}}, \hash, \blob\to\hash) &\to \seq{\optional{\hash}}\\
       (\mathbf{r}, l, H) &\mapsto P(\mathbf{r}, l, 0, H)
     }\\
     \where P&\colon\deffunc{
-      (\seq{\hash?}, \hash, \N, \blob\to\hash) &\to \seq{\hash?}\\
+      (\seq{\optional{\hash}}, \hash, \N, \blob\to\hash) &\to \seq{\optional{\hash}}\\
       (\mathbf{r}, l, n, H) &\mapsto \begin{cases}
-        \mathbf{r} \doubleplus l &\when n \ge |\mathbf{r}|\\
-        R(\mathbf{r}, n, l) &\when n < |\mathbf{r}| \wedge \mathbf{r}_n = \none\\
+        \mathbf{r} \doubleplus l &\when n \ge \len{\mathbf{r}}\\
+        R(\mathbf{r}, n, l) &\when n < \len{\mathbf{r}} \wedge \mathbf{r}_n = \none\\
         P(R(\mathbf{r}, n, \none), H(\mathbf{r}_n \concat l), n + 1, H) &\otherwise
       \end{cases}
     }\\
@@ -234,7 +234,7 @@ We define the append function $\mathcal{A}$ as:
 We define the \textsc{mmr} encoding function as $\se_M$:
 \begin{equation}
   \se_M\colon\deffunc{
-    \seq{\hash?} &\to \blob \\
+    \seq{\optional{\hash}} &\to \blob \\
     \mathbf{b} &\mapsto \se(\var{[\maybe{x}\mid x \orderedin \mathbf{b}]})
   }
 \end{equation}
@@ -242,18 +242,18 @@ We define the \textsc{mmr} encoding function as $\se_M$:
 We define the \textsc{mmr} super-peak function as $\mathcal{M}_R$:
 \begin{equation}
   \mathcal{M}_R\colon\deffunc{
-    \seq{\hash?} &\to \hash \\
+    \seq{\optional{\hash}} &\to \hash \\
     \mathbf{b} &\mapsto \begin{cases}
-      \zerohash &\when |\mathbf{h}| = 0\\
-      \mathbf{h}_0 &\when |\mathbf{h}| = 1\\
-      \keccak(\token{\$peak} \concat \mathcal{M}_R(\mathbf{h}_{\dots|\mathbf{h}|-1}) \concat \mathbf{h}_{|\mathbf{h}|-1}) &\otherwise \\
+      \zerohash &\when \len{\mathbf{h}} = 0\\
+      \mathbf{h}_0 &\when \len{\mathbf{h}} = 1\\
+      \keccak(\token{\$peak} \concat \mathcal{M}_R(\mathbf{h}_{\dots\len{\mathbf{h}}-1}) \concat \mathbf{h}_{\len{\mathbf{h}}-1}) &\otherwise \\
       \multicolumn{2}{l}{\where \mathbf{h} = \sq{h \mid h \orderedin \mathbf{b}, h \ne \none}}
     \end{cases}
   }
 \end{equation}
 
 %\begin{equation}
-%  \left\{\mathbb{H}\right.
+%  \left\{\zerohash\right.
 %\end{equation}
 %\begin{equation}
 %  \left\{\,\begin{aligned} & (\mathbb{H}) \\ & \begin{cases}x&y\end{cases} \end{aligned}\right.
