--- a/text/overview.tex
+++ b/text/overview.tex
@@ -31,37 +31,37 @@ The header is a collection of metadata primarily concerned with cryptographic re
 
 Our state may be logically partitioned into several largely independent segments which can both help avoid visual clutter within our protocol description and provide formality over elements of computation which may be simultaneously calculated (i.e. parallelized). We therefore pronounce an equivalence between $\thestate$ (some complete state) and a tuple of partitioned segments of that state:
 \begin{align}\label{eq:statecomposition}
-  \thestate &\equiv (\authpool, \recenthistory, \gamma, \accounts, \eta, \iota, \kappa, \lambda, \rho, \tau, \varphi, \privileges, \psi, \pi, \ready, \accumulated)
+  \thestate &\equiv (\authpool, \recenthistory, \safrole, \accounts, \entropy, \stagingset, \activeset, \previousset, \rho, \thetime, \varphi, \privileges, \psi, \pi, \ready, \accumulated)
 \end{align}
 
 In summary, $\accounts$ is the portion of state dealing with \emph{services}, analogous in \Jam to the Yellow Paper's (smart contract) \emph{accounts}, the only state of the \emph{YP}'s Ethereum. The identities of services which hold some privileged status are tracked in $\privileges$.
 
-Validators, who are the set of economic actors uniquely privileged to help build and maintain the \Jam chain, are identified within $\kappa$, archived in $\lambda$ and enqueued from $\iota$. All other state concerning the determination of these keys is held within $\gamma$. Note this is a departure from the \emph{YP} proof-of-work definitions which were mostly stateless, and this set was not enumerated but rather limited to those with sufficient compute power to find a partial hash-collision in the \textsc{sha}\oldstylenums{2}-\oldstylenums{256} cryptographic hash function. An on-chain entropy pool is retained in $\eta$.
+Validators, who are the set of economic actors uniquely privileged to help build and maintain the \Jam chain, are identified within $\activeset$, archived in $\previousset$ and enqueued from $\stagingset$. All other state concerning the determination of these keys is held within $\safrole$. Note this is a departure from the \emph{YP} proof-of-work definitions which were mostly stateless, and this set was not enumerated but rather limited to those with sufficient compute power to find a partial hash-collision in the \textsc{sha}\oldstylenums{2}-\oldstylenums{256} cryptographic hash function. An on-chain entropy pool is retained in $\entropy$.
 
 Our state also tracks two aspects of each core: $\authpool$, the authorization requirement which work done on that core must satisfy at the time of being reported on-chain, together with the queue which fills this, $\varphi$; and $\rho$, each of the cores' currently assigned \emph{report}, the availability of whose \emph{work-package} must yet be assured by a super-majority of validators.
 
-Finally, details of the most recent blocks and timeslot index are tracked in $\recenthistory$ and $\tau$ respectively, work-reports which are ready to be accumulated and work-packages which were recently accumulated are tracked in $\ready$ and $\accumulated$ respectively and, judgments are tracked in $\psi$ and validator statistics are tracked in $\pi$.
+Finally, details of the most recent blocks and timeslot index are tracked in $\recenthistory$ and $\thetime$ respectively, work-reports which are ready to be accumulated and work-packages which were recently accumulated are tracked in $\ready$ and $\accumulated$ respectively and, judgments are tracked in $\psi$ and validator statistics are tracked in $\pi$.
 
 \subsubsection{State Transition Dependency Graph}
 
 Much as in the \emph{YP}, we specify $\Upsilon$ as the implication of formulating all items of posterior state in terms of the prior state and block. To aid the architecting of implementations which parallelize this computation, we minimize the depth of the dependency graph where possible. The overall dependency graph is specified here:
 \begin{align}\label{eq:transitionfunctioncomposition}
-  \tau' &\prec \theheader \\
+  \thetime' &\prec \theheader \\
   \recenthistory^\dagger &\prec (\theheader, \recenthistory) \label{eq:betadagger} \\
-  \gamma' &\prec (\theheader, \tau, \xttickets, \gamma, \iota, \eta', \kappa', \psi') \\
-  \eta' &\prec (\theheader, \tau, \eta) \\
-  \kappa' &\prec (\theheader, \tau, \kappa, \gamma) \\
-  \lambda' &\prec (\theheader, \tau, \lambda, \kappa) \\
+  \safrole' &\prec (\theheader, \thetime, \xttickets, \safrole, \stagingset, \entropy', \activeset', \psi') \\
+  \entropy' &\prec (\theheader, \thetime, \entropy) \\
+  \activeset' &\prec (\theheader, \thetime, \activeset, \safrole) \\
+  \previousset' &\prec (\theheader, \thetime, \previousset, \activeset) \\
   \psi' &\prec (\xtdisputes, \psi) \\
   \rho^\dagger &\prec (\xtdisputes, \rho) \label{eq:rhodagger} \\
   \rho^\ddagger &\prec (\xtassurances, \rho^\dagger) \label{eq:rhoddagger} \\
-  \rho' &\prec (\xtguarantees, \rho^\ddagger, \kappa, \tau') \label{eq:rhoprime} \\
+  \rho' &\prec (\xtguarantees, \rho^\ddagger, \activeset, \thetime') \label{eq:rhoprime} \\
   \mathbf{W}^* &\prec (\xtassurances, \rho') \\
-  (\ready', \accumulated', \accountspostxfer, \privileges', \iota', \varphi', \lastaccout', \mathbf{I}, \mathbf{X}) &\prec (\mathbf{W}^*, \ready, \accumulated, \accountspre, \privileges, \iota, \varphi, \tau, \tau') \label{eq:accountspostxfer} \\
+  (\ready', \accumulated', \accountspostxfer, \privileges', \stagingset', \varphi', \lastaccout', \mathbf{I}, \mathbf{X}) &\prec (\mathbf{W}^*, \ready, \accumulated, \accountspre, \privileges, \stagingset, \varphi, \thetime, \thetime') \label{eq:accountspostxfer} \\
   \recenthistory' &\prec (\theheader, \xtguarantees, \recenthistory^\dagger, \lastaccout') \label{eq:betaprime} \\
-  \accountspostpreimage &\prec (\xtpreimages, \accountspostxfer, \tau') \label{eq:accountspostpreimage} \\
+  \accountspostpreimage &\prec (\xtpreimages, \accountspostxfer, \thetime') \label{eq:accountspostpreimage} \\
   \authpool' &\prec (\theheader, \xtguarantees, \varphi', \authpool) \\
-  \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \tau, \kappa', \pi, \theheader, \mathbf{I}, \mathbf{X})\!\!\!\!\!\!\!\!
+  \pi' &\prec (\xtguarantees, \xtpreimages, \xtassurances, \xttickets, \thetime, \activeset', \pi, \theheader, \mathbf{I}, \mathbf{X})\!\!\!\!\!\!\!\!
 \end{align}
 
 The only synchronous entanglements are visible through the intermediate components superscripted with a dagger and defined in equations \ref{eq:betadagger}, \ref{eq:rhodagger}, \ref{eq:rhoddagger}, \ref{eq:rhoprime}, \ref{eq:accountspostxfer}, \ref{eq:betaprime} and \ref{eq:accountspostpreimage}. The latter two mark a merge and join in the dependency graph and, concretely, imply that the availability extrinsic may be fully processed and accumulation of work happen before the preimage lookup extrinsic is folded into state.
@@ -144,20 +144,20 @@ In the present work, we presume the definition of a \emph{Polkadot Virtual Machi
 
 The \textsc{pvm} is comparable to the \textsc{evm} defined in the Yellow Paper, but somewhat simpler: the complex instructions for cryptographic operations are missing as are those which deal with environmental interactions. Overall it is far less opinionated since it alters a pre-existing general purpose design, \textsc{risc-v}, and optimizes it for our needs. This gives us excellent pre-existing tooling, since \textsc{pvm} remains essentially compatible with \textsc{risc-v}, including support from the compiler toolkit \textsc{llvm} and languages such as Rust and C++. Furthermore, the instruction set simplicity which \textsc{risc-v} and \textsc{pvm} share, together with the register size (64-bit), active number (13) and endianness (little) make it especially well-suited for creating efficient recompilers on to common hardware architectures.
 
-The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\lseq\N_R\rseq_{13}$) and \textsc{ram} ($\mathbb{M}$) and has executed for up to some amount of gas ($\gas$), a number of approximately time-proportional computational steps:
+The \textsc{pvm} is fully defined in appendix \ref{sec:virtualmachine}, but for contextualization we will briefly summarize the basic invocation function $\Psi$ which computes the resultant state of a \textsc{pvm} instance initialized with some registers ($\seq{\pvmreg}_{13}$) and \textsc{ram} ($\mathbb{M}$) and has executed for up to some amount of gas ($\gas$), a number of approximately time-proportional computational steps:
 \begin{equation}
   \Psi\colon
   \tuple{\,
     \begin{alignedat}{3}
-      &\blob\ts\ \ \N_R\ts\ \ &&\gas\ts\\
-      &\!\lseq\N_R\rseq_{13}\ts\ \ &&\mathbb{M}\\
+      &\blob,\,\ \ \pvmreg,\,\ \ &&\gas,\,\\
+      &\!\seq{\pvmreg}_{13},\,\ \ &&\mathbb{M}\\
     \end{alignedat}
   \,}
   \to
   \tuple{\,
     \begin{aligned}
-      &\{\halt, \panic, \oog\} \cup \{\fault,\host\} \times \N_R,\\
-      &\N_R,\ \ \Z_G,\ \ \seq{\N_R}_{13},\ \ \mathbb{M}
+      &\{\halt, \panic, \oog\} \cup \{\fault,\host\} \times \pvmreg,\\
+      &\pvmreg,\ \ \Z_G,\ \ \seq{\pvmreg}_{13},\ \ \mathbb{M}
     \end{aligned}
   \,}
 \end{equation}
@@ -166,12 +166,12 @@ We refer to the time-proportional computational steps as \emph{gas} (much like i
 \begin{equation}\label{eq:gasregentry}
   \Z_G \equiv \mathbb{Z}_{-2^{63}\dots2^{63}}\ ,\quad
   \gas \equiv \mathbb{N}_{2^{64}}\ ,\quad
-  \N_R \equiv \N_{2^{64}}
+  \pvmreg \equiv \N_{2^{64}}
 \end{equation}
 
 It is left as a rather important implementation detail to ensure that the amount of time taken while computing the function $\Psi(\dots, \gascounter, \dots)$ has a maximum computation time approximately proportional to the value of $\gascounter$ regardless of other operands.
 
-The \textsc{pvm} is a very simple \textsc{risc} \emph{register machine} and as such has 13 registers, each of which is a 64-bit quantity, denoted as $\N_R$, a natural less than $2^{64}$.\footnote{This is three fewer than \textsc{risc-v}'s 16, however the amount that program code output by compilers uses is 13 since two are reserved for operating system use and the third is fixed as zero} Within the context of the \textsc{pvm}, $\registers \in \seq{\N_R}_{13}$ is typically used to denote the registers.
+The \textsc{pvm} is a very simple \textsc{risc} \emph{register machine} and as such has 13 registers, each of which is a 64-bit quantity, denoted as $\pvmreg$, a natural less than $2^{64}$.\footnote{This is three fewer than \textsc{risc-v}'s 16, however the amount that program code output by compilers uses is 13 since two are reserved for operating system use and the third is fixed as zero} Within the context of the \textsc{pvm}, $\registers \in \seq{\pvmreg}_{13}$ is typically used to denote the registers.
 \begin{align}\label{eq:pvmmemory}
   \mathbb{M} &\equiv \tuple{
     \isa{\mathbf{V}}{\blob_{2^{32}}},
