--- a/text/recent_history.tex
+++ b/text/recent_history.tex
@@ -9,15 +9,15 @@ We retain in state information on the most recent $\mathsf{H}$ blocks. This is u
     \isa{s}{\hash},
     \isa{\mathbf{p}}{\dict{\hash}{\hash}}
   }}_{:\mathsf{H}}\\
-  \beefybelt &\in \seq{\hash?} \\
+  \beefybelt &\in \seq{\optional{\hash}} \\
   \lastaccout &\in \seq{\tup{\N_S, \hash}}
 \end{align}
 
-For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\mathsf{C} = 341$).
+For each recent block, we retain its header hash, its state root, its accumulation-result \textsc{mmb} and the corresponding work-package hashes of each item reported (which is no more than the total number of cores, $\corecount = 341$).
 
 During the accumulation stage, a value with the partial transition of this state is provided which contains the correction for the newly-known state-root of the parent block:
 \begin{equation}\label{eq:correctlaststateroot}
-  \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[|\recenthistory| - 1]_s = \H_\¬priorstateroot
+  \recenthistory^\dagger \equiv \recenthistory\quad\exc\quad\recenthistory^\dagger[\len{\recenthistory} - 1]_s = \H_\¬priorstateroot
 \end{equation}
 
 We define the new Accumulation Output Log $\beefybelt$. This is formed from the block's accumulation-output sequence $\lastaccout'$ (defined in section \ref{sec:accumulation}), taking its root using the basic binary Merklization function ($\mathcal{M}_B$, defined in appendix \ref{sec:merklization}) and appending it to the previous log value with the \textsc{mmb} append function ($\mathcal{A}$, defined in appendix \ref{sec:mmr}). Throughout, the Keccak hash function is used to maximize compatibility with legacy systems:
